Geometry nodes (Fields) Assertion failed at input_has_attribute_toggle() #91809

Closed
opened 2021-09-29 12:45:06 +02:00 by Vitor Boschi · 18 comments
Contributor

System Information
Operating system: Linux Ubuntu 20.04
Graphics card: Nvidia RTX 3090

Blender Version
Broken: master 4cf4bb2664 (2021-09-28)

Blender crashes because hitting an assertion:

BLI_assert failed: source/blender/modifiers/intern/MOD_nodes.cc:320, input_has_attribute_toggle(), at 'node_tree.field_inferencing_interface != nullptr'

Exact steps for others to reproduce the error

  1. Start blender
  2. Enter geometry nodes workspace
  3. Click New to create a new GN modifier
  4. Add a new Math node
  5. Connect a new output socket from Group Input into the first socket of the Math node
  6. Click on empty space to deselect nodes
  7. Hit Ctrl+Z
  8. Crash

Stack trace:

- 0  __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:50
- 1  0x00007ffff6dd2859 in __GI_abort () at abort.c:79
- 2  0x000000001aff98ae in _BLI_assert_abort () at /mnt/data/Devel/blender-git/blender/source/blender/blenlib/intern/BLI_assert.c:61
- 3  0x000000000631e3f2 in input_has_attribute_toggle(bNodeTree const&, int) (node_tree=..., socket_index=1)
    at /mnt/data/Devel/blender-git/blender/source/blender/modifiers/intern/MOD_nodes.cc:320
#4  0x0000000006325d2b in initialize_group_input(NodesModifierData&, blender::nodes::OutputSocketRef const&, void*)
    (nmd=..., socket=..., r_value=0x60e000097498) at /mnt/data/Devel/blender-git/blender/source/blender/modifiers/intern/MOD_nodes.cc:693
#5  0x000000000632b95d in compute_geometry(blender::nodes::DerivedNodeTree const&, blender::Span<blender::nodes::NodeRef const*>, blender::nodes::NodeRef const&, GeometrySet, NodesModifierData*, ModifierEvalContext const*)
    (tree=..., group_input_nodes=..., output_node=..., input_geometry_set=..., nmd=0x60f000191cb8, ctx=0x7fffbc7a0bd0)
    at /mnt/data/Devel/blender-git/blender/source/blender/modifiers/intern/MOD_nodes.cc:934
#6  0x000000000632de20 in modifyGeometry(ModifierData*, ModifierEvalContext const*, GeometrySet&)
    (md=0x60f000191cb8, ctx=0x7fffbc7a0bd0, geometry_set=...)
    at /mnt/data/Devel/blender-git/blender/source/blender/modifiers/intern/MOD_nodes.cc:1066
#7  0x000000000632e768 in modifyGeometrySet(ModifierData*, ModifierEvalContext const*, GeometrySet*)
    (md=0x60f000191cb8, ctx=0x7fffbc7a0bd0, geometry_set=0x7fffbc7a0ed0)
    at /mnt/data/Devel/blender-git/blender/source/blender/modifiers/intern/MOD_nodes.cc:1093
#8  0x0000000004902d86 in modifier_modify_mesh_and_geometry_set(ModifierData*, ModifierEvalContext const&, Mesh*, GeometrySet&)
    (md=0x60f000191cb8, mectx=..., input_mesh=0x61c00011f088, geometry_set=...)
    at /mnt/data/Devel/blender-git/blender/source/blender/blenkernel/intern/DerivedMesh.cc:953
#9  0x00000000049067df in mesh_calc_modifiers(Depsgraph*, Scene*, Object*, bool, bool, CustomData_MeshMasks const*, int, bool, bool, Mesh**, Mesh**, GeometrySet**)
    (depsgraph=0x61a00010aa88, scene=0x62300007fd08, ob=0x61a00010b088, use_deform=true, need_mapping=false, dataMask=0x7fffbc7a15a0, index=-1, use_cache=true, allow_shared_mesh=true, r_deform=0x7fffbc7a14a0, r_final=0x7fffbc7a1480, r_geometry_set=0x7fffbc7a14c0)
    at /mnt/data/Devel/blender-git/blender/source/blender/blenkernel/intern/DerivedMesh.cc:1291
#10 0x000000000490da2b in mesh_build_data(Depsgraph*, Scene*, Object*, CustomData_MeshMasks const*, bool)
    (depsgraph=0x61a00010aa88, scene=0x62300007fd08, ob=0x61a00010b088, dataMask=0x7fffbc7a15a0, need_mapping=false)
    at /mnt/data/Devel/blender-git/blender/source/blender/blenkernel/intern/DerivedMesh.cc:1914
#11 0x000000000490f684 in makeDerivedMesh(Depsgraph*, Scene*, Object*, BMEditMesh*, CustomData_MeshMasks const*)
    (depsgraph=0x61a00010aa88, scene=0x62300007fd08, ob=0x61a00010b088, em=0x0, dataMask=0x7fffbc7a16c0)
    at /mnt/data/Devel/blender-git/blender/source/blender/blenkernel/intern/DerivedMesh.cc:2061
#12 0x00000000037cee65 in BKE_object_handle_data_update (depsgraph=0x61a00010aa88, scene=0x62300007fd08, ob=0x61a00010b088)
    at /mnt/data/Devel/blender-git/blender/source/blender/blenkernel/intern/object_update.c:202
#13 0x00000000037d196b in BKE_object_eval_uber_data (depsgraph=0x61a00010aa88, scene=0x62300007fd08, ob=0x61a00010b088)
--Type <RET> for more, q to quit, c to continue without paging--
   lender-git/blender/source/blender/blenkernel/intern/object_update.c:395
#14 0x0000000005d09b4d in blender::deg::DepsgraphNodeBuilder::<lambda(Depsgraph*)>::operator()(Depsgraph *) const
    (__closure=0x6110016da248, depsgraph=0x61a00010aa88)
    at /mnt/data/Devel/blender-git/blender/source/blender/depsgraph/intern/builder/deg_builder_nodes.cc:1485
#15 0x0000000005d2dabd in std::_Function_handler<void(Depsgraph*), blender::deg::DepsgraphNodeBuilder::build_object_data_geometry(Object*, bool)::<lambda(Depsgraph*)> >::_M_invoke(const std::_Any_data &, Depsgraph *&&) (__functor=..., __args#0=@0x7fffbc7a1830: 0x61a00010aa88)
    at /usr/include/c++/9/bits/std_function.h:300
#16 0x0000000005c666c9 in std::function<void (Depsgraph*)>::operator()(Depsgraph*) const (this=0x6110016da248, __args#0=0x7fffbc7a18a0)
    at /usr/include/c++/9/bits/std_function.h:688
#17 0x0000000005c61ab2 in blender::deg::(anonymous namespace)::evaluate_node(blender::deg::(anonymous namespace)::DepsgraphEvalState const*, blender::deg::OperationNode*) (state=0x7fffffffd880, operation_node=0x6110016da188)
    at /mnt/data/Devel/blender-git/blender/source/blender/depsgraph/intern/eval/deg_eval.cc:118
#18 0x0000000005c61b01 in blender::deg::(anonymous namespace)::deg_task_run_func(TaskPool*, void*)
    (pool=0x61300062b2c8, taskdata=0x6110016da188)
    at /mnt/data/Devel/blender-git/blender/source/blender/depsgraph/intern/eval/deg_eval.cc:129
#19 0x000000001b53b7c0 in Task::operator()() const (this=0x613000210ac8)
    at /mnt/data/Devel/blender-git/blender/source/blender/blenlib/intern/task_pool.cc:178
#20 0x000000001b53eeda in tbb::internal::function_task<Task>::execute() (this=0x613000210ac0)
    at /mnt/data/Devel/blender-git/lib/linux_centos7_x86_64/tbb/include/tbb/task.h:1059
- 21 0x0000000005135475 in tbb::internal::custom_scheduler<tbb::internal::IntelSchedulerTraits>::process_bypass_loop(tbb::internal::context_guard_helper<false>&, tbb::task*, long) ()
- 22 0x000000000513572b in tbb::internal::custom_scheduler<tbb::internal::IntelSchedulerTraits>::local_wait_for_all(tbb::task&, tbb::task*)
    ()
- 23 0x0000000005124327 in tbb::internal::arena::process(tbb::internal::generic_scheduler&) ()
- 24 0x000000000512f160 in tbb::internal::market::process(rml::job&) ()
- 25 0x000000000513119c in tbb::internal::rml::private_worker::run() ()
- 26 0x0000000005131399 in tbb::internal::rml::private_worker::thread_routine(void*) ()
- 27 0x00007ffff7546609 in start_thread (arg=<optimized out>) at pthread_create.c:477
- 28 0x00007ffff6ecf293 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95
**System Information** Operating system: Linux Ubuntu 20.04 Graphics card: Nvidia RTX 3090 **Blender Version** Broken: master 4cf4bb2664ebe145dac9715bbbfcc2b96f5ff175 (2021-09-28) Blender crashes because hitting an assertion: ``` BLI_assert failed: source/blender/modifiers/intern/MOD_nodes.cc:320, input_has_attribute_toggle(), at 'node_tree.field_inferencing_interface != nullptr' ``` **Exact steps for others to reproduce the error** 1. Start blender 2. Enter geometry nodes workspace 3. Click New to create a new GN modifier 3. Add a new Math node 4. Connect a new output socket from Group Input into the first socket of the Math node 5. Click on empty space to deselect nodes 6. Hit Ctrl+Z 7. Crash Stack trace: ``` - 0 __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:50 - 1 0x00007ffff6dd2859 in __GI_abort () at abort.c:79 - 2 0x000000001aff98ae in _BLI_assert_abort () at /mnt/data/Devel/blender-git/blender/source/blender/blenlib/intern/BLI_assert.c:61 - 3 0x000000000631e3f2 in input_has_attribute_toggle(bNodeTree const&, int) (node_tree=..., socket_index=1) at /mnt/data/Devel/blender-git/blender/source/blender/modifiers/intern/MOD_nodes.cc:320 #4 0x0000000006325d2b in initialize_group_input(NodesModifierData&, blender::nodes::OutputSocketRef const&, void*) (nmd=..., socket=..., r_value=0x60e000097498) at /mnt/data/Devel/blender-git/blender/source/blender/modifiers/intern/MOD_nodes.cc:693 #5 0x000000000632b95d in compute_geometry(blender::nodes::DerivedNodeTree const&, blender::Span<blender::nodes::NodeRef const*>, blender::nodes::NodeRef const&, GeometrySet, NodesModifierData*, ModifierEvalContext const*) (tree=..., group_input_nodes=..., output_node=..., input_geometry_set=..., nmd=0x60f000191cb8, ctx=0x7fffbc7a0bd0) at /mnt/data/Devel/blender-git/blender/source/blender/modifiers/intern/MOD_nodes.cc:934 #6 0x000000000632de20 in modifyGeometry(ModifierData*, ModifierEvalContext const*, GeometrySet&) (md=0x60f000191cb8, ctx=0x7fffbc7a0bd0, geometry_set=...) at /mnt/data/Devel/blender-git/blender/source/blender/modifiers/intern/MOD_nodes.cc:1066 #7 0x000000000632e768 in modifyGeometrySet(ModifierData*, ModifierEvalContext const*, GeometrySet*) (md=0x60f000191cb8, ctx=0x7fffbc7a0bd0, geometry_set=0x7fffbc7a0ed0) at /mnt/data/Devel/blender-git/blender/source/blender/modifiers/intern/MOD_nodes.cc:1093 #8 0x0000000004902d86 in modifier_modify_mesh_and_geometry_set(ModifierData*, ModifierEvalContext const&, Mesh*, GeometrySet&) (md=0x60f000191cb8, mectx=..., input_mesh=0x61c00011f088, geometry_set=...) at /mnt/data/Devel/blender-git/blender/source/blender/blenkernel/intern/DerivedMesh.cc:953 #9 0x00000000049067df in mesh_calc_modifiers(Depsgraph*, Scene*, Object*, bool, bool, CustomData_MeshMasks const*, int, bool, bool, Mesh**, Mesh**, GeometrySet**) (depsgraph=0x61a00010aa88, scene=0x62300007fd08, ob=0x61a00010b088, use_deform=true, need_mapping=false, dataMask=0x7fffbc7a15a0, index=-1, use_cache=true, allow_shared_mesh=true, r_deform=0x7fffbc7a14a0, r_final=0x7fffbc7a1480, r_geometry_set=0x7fffbc7a14c0) at /mnt/data/Devel/blender-git/blender/source/blender/blenkernel/intern/DerivedMesh.cc:1291 #10 0x000000000490da2b in mesh_build_data(Depsgraph*, Scene*, Object*, CustomData_MeshMasks const*, bool) (depsgraph=0x61a00010aa88, scene=0x62300007fd08, ob=0x61a00010b088, dataMask=0x7fffbc7a15a0, need_mapping=false) at /mnt/data/Devel/blender-git/blender/source/blender/blenkernel/intern/DerivedMesh.cc:1914 #11 0x000000000490f684 in makeDerivedMesh(Depsgraph*, Scene*, Object*, BMEditMesh*, CustomData_MeshMasks const*) (depsgraph=0x61a00010aa88, scene=0x62300007fd08, ob=0x61a00010b088, em=0x0, dataMask=0x7fffbc7a16c0) at /mnt/data/Devel/blender-git/blender/source/blender/blenkernel/intern/DerivedMesh.cc:2061 #12 0x00000000037cee65 in BKE_object_handle_data_update (depsgraph=0x61a00010aa88, scene=0x62300007fd08, ob=0x61a00010b088) at /mnt/data/Devel/blender-git/blender/source/blender/blenkernel/intern/object_update.c:202 #13 0x00000000037d196b in BKE_object_eval_uber_data (depsgraph=0x61a00010aa88, scene=0x62300007fd08, ob=0x61a00010b088) --Type <RET> for more, q to quit, c to continue without paging-- lender-git/blender/source/blender/blenkernel/intern/object_update.c:395 #14 0x0000000005d09b4d in blender::deg::DepsgraphNodeBuilder::<lambda(Depsgraph*)>::operator()(Depsgraph *) const (__closure=0x6110016da248, depsgraph=0x61a00010aa88) at /mnt/data/Devel/blender-git/blender/source/blender/depsgraph/intern/builder/deg_builder_nodes.cc:1485 #15 0x0000000005d2dabd in std::_Function_handler<void(Depsgraph*), blender::deg::DepsgraphNodeBuilder::build_object_data_geometry(Object*, bool)::<lambda(Depsgraph*)> >::_M_invoke(const std::_Any_data &, Depsgraph *&&) (__functor=..., __args#0=@0x7fffbc7a1830: 0x61a00010aa88) at /usr/include/c++/9/bits/std_function.h:300 #16 0x0000000005c666c9 in std::function<void (Depsgraph*)>::operator()(Depsgraph*) const (this=0x6110016da248, __args#0=0x7fffbc7a18a0) at /usr/include/c++/9/bits/std_function.h:688 #17 0x0000000005c61ab2 in blender::deg::(anonymous namespace)::evaluate_node(blender::deg::(anonymous namespace)::DepsgraphEvalState const*, blender::deg::OperationNode*) (state=0x7fffffffd880, operation_node=0x6110016da188) at /mnt/data/Devel/blender-git/blender/source/blender/depsgraph/intern/eval/deg_eval.cc:118 #18 0x0000000005c61b01 in blender::deg::(anonymous namespace)::deg_task_run_func(TaskPool*, void*) (pool=0x61300062b2c8, taskdata=0x6110016da188) at /mnt/data/Devel/blender-git/blender/source/blender/depsgraph/intern/eval/deg_eval.cc:129 #19 0x000000001b53b7c0 in Task::operator()() const (this=0x613000210ac8) at /mnt/data/Devel/blender-git/blender/source/blender/blenlib/intern/task_pool.cc:178 #20 0x000000001b53eeda in tbb::internal::function_task<Task>::execute() (this=0x613000210ac0) at /mnt/data/Devel/blender-git/lib/linux_centos7_x86_64/tbb/include/tbb/task.h:1059 - 21 0x0000000005135475 in tbb::internal::custom_scheduler<tbb::internal::IntelSchedulerTraits>::process_bypass_loop(tbb::internal::context_guard_helper<false>&, tbb::task*, long) () - 22 0x000000000513572b in tbb::internal::custom_scheduler<tbb::internal::IntelSchedulerTraits>::local_wait_for_all(tbb::task&, tbb::task*) () - 23 0x0000000005124327 in tbb::internal::arena::process(tbb::internal::generic_scheduler&) () - 24 0x000000000512f160 in tbb::internal::market::process(rml::job&) () - 25 0x000000000513119c in tbb::internal::rml::private_worker::run() () - 26 0x0000000005131399 in tbb::internal::rml::private_worker::thread_routine(void*) () - 27 0x00007ffff7546609 in start_thread (arg=<optimized out>) at pthread_create.c:477 - 28 0x00007ffff6ecf293 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95 ```
Author
Contributor

Added subscriber: @vitorboschi

Added subscriber: @vitorboschi

#92162 was marked as duplicate of this issue

#92162 was marked as duplicate of this issue

#92118 was marked as duplicate of this issue

#92118 was marked as duplicate of this issue

#92107 was marked as duplicate of this issue

#92107 was marked as duplicate of this issue

#91974 was marked as duplicate of this issue

#91974 was marked as duplicate of this issue

#91909 was marked as duplicate of this issue

#91909 was marked as duplicate of this issue

#91866 was marked as duplicate of this issue

#91866 was marked as duplicate of this issue
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Hans Goudey self-assigned this 2021-09-29 18:25:05 +02:00

Added subscriber: @JoshParsons

Added subscriber: @JoshParsons
Member

Added subscribers: @Rob-James, @PratikPB2123

Added subscribers: @Rob-James, @PratikPB2123
Member

Added subscriber: @georgK

Added subscriber: @georgK
Member

Added subscriber: @Pasang

Added subscriber: @Pasang
Member

Added subscriber: @MichaelHermann

Added subscriber: @MichaelHermann
Member

Added subscriber: @OrestisKonstantinidis

Added subscriber: @OrestisKonstantinidis

This issue was referenced by f18ab3470f

This issue was referenced by f18ab3470f3da32d561781e0794e5983221d5a2d
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
6 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#91809
No description provided.